WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132375
[iOS WK2] Some accerated overflow-scroll doesn't scroll correctly
https://bugs.webkit.org/show_bug.cgi?id=132375
Summary
[iOS WK2] Some accerated overflow-scroll doesn't scroll correctly
Simon Fraser (smfr)
Reported
2014-04-29 20:58:11 PDT
[iOS WK2] Some accerated overflow-scroll doesn't scroll correctly
Attachments
Patch
(4.80 KB, patch)
2014-04-29 21:02 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-08 for mac-mountainlion
(578.49 KB, application/zip)
2014-04-29 22:26 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2
(512.78 KB, application/zip)
2014-04-29 23:05 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2
(463.96 KB, application/zip)
2014-04-30 00:02 PDT
,
Build Bot
no flags
Details
Patch
(6.50 KB, patch)
2014-04-30 12:42 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-04-29 21:02:28 PDT
Created
attachment 230455
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-04-29 21:03:01 PDT
<
rdar://problem/16272971
>
alan
Comment 3
2014-04-29 21:04:24 PDT
looks good.
Build Bot
Comment 4
2014-04-29 22:25:57 PDT
Comment on
attachment 230455
[details]
Patch
Attachment 230455
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/6014159909027840
New failing tests: compositing/overflow/composited-scrolling-creates-a-stacking-container.html
Build Bot
Comment 5
2014-04-29 22:26:00 PDT
Created
attachment 230457
[details]
Archive of layout-test-results from webkit-ews-08 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-08 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Build Bot
Comment 6
2014-04-29 23:05:02 PDT
Comment on
attachment 230455
[details]
Patch
Attachment 230455
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/4600067696623616
New failing tests: compositing/overflow/composited-scrolling-creates-a-stacking-container.html
Build Bot
Comment 7
2014-04-29 23:05:06 PDT
Created
attachment 230460
[details]
Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-11 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 8
2014-04-30 00:02:04 PDT
Comment on
attachment 230455
[details]
Patch
Attachment 230455
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/5200478354800640
New failing tests: compositing/overflow/composited-scrolling-creates-a-stacking-container.html
Build Bot
Comment 9
2014-04-30 00:02:08 PDT
Created
attachment 230464
[details]
Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-12 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Simon Fraser (smfr)
Comment 10
2014-04-30 12:42:32 PDT
Created
attachment 230509
[details]
Patch
Simon Fraser (smfr)
Comment 11
2014-04-30 19:16:14 PDT
https://trac.webkit.org/r168078
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug